// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`404 with fetch button accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "button",
    },
    Object {
      "description": "Search for a package",
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "Oops! We couldn't find “github.com/package/does/not/exist”.",
      "role": "heading",
    },
    Object {
      "name": "Check that you entered the URL correctly, try fetching it following the",
      "role": "text",
    },
    Object {
      "name": "instructions here",
      "role": "link",
    },
    Object {
      "name": ", or request to add “github.com/package/does/not/exist” to pkg.go.dev.",
      "role": "text",
    },
    Object {
      "name": "Request “github.com/package/does/not/exist”",
      "role": "button",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "404 Not Found · pkg.go.dev",
  "role": "WebArea",
}
`;

exports[`badge accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "button",
    },
    Object {
      "description": "Search for a package",
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "level": 1,
      "name": "Create a badge",
      "role": "heading",
    },
    Object {
      "name": "Create a badge to link to pkg.go.dev from your project website or README file.",
      "role": "text",
    },
    Object {
      "name": "Badge",
      "role": "text",
    },
    Object {
      "name": "Go Reference",
      "role": "link",
    },
    Object {
      "name": "URL",
      "role": "text",
    },
    Object {
      "name": "URL",
      "role": "textbox",
    },
    Object {
      "name": "",
      "role": "button",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "name": "Type a pkg.go.dev URL above to create a badge link.",
      "role": "text",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Badge generation tool · pkg.go.dev",
  "role": "WebArea",
}
`;

exports[`error accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "button",
    },
    Object {
      "description": "Search for a package",
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "name": "The Go Gopher",
      "role": "img",
    },
    Object {
      "level": 3,
      "name": "v1.0-badversion is not a valid semantic version.",
      "role": "heading",
    },
    Object {
      "name": "To search for packages like bad.package,",
      "role": "text",
    },
    Object {
      "name": "click here",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "400 Bad Request · pkg.go.dev",
  "role": "WebArea",
}
`;

exports[`home accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "name": "Cartoon gopher typing",
      "role": "img",
    },
    Object {
      "description": "Search for Go packages",
      "focused": true,
      "name": "Search for Go packages",
      "role": "textbox",
    },
    Object {
      "name": "Search",
      "role": "button",
    },
    Object {
      "name": "EXAMPLE SEARCHES:",
      "role": "text",
    },
    Object {
      "name": "“http”",
      "role": "link",
    },
    Object {
      "name": "“command”",
      "role": "link",
    },
    Object {
      "name": "“yaml OR json OR xml”",
      "role": "link",
    },
    Object {
      "name": "Search help",
      "role": "link",
    },
    Object {
      "name": "Frequently asked questions:",
      "role": "text",
    },
    Object {
      "name": "How can I add a package?",
      "role": "link",
    },
    Object {
      "name": "How can I remove a package?",
      "role": "link",
    },
    Object {
      "name": "How can I add a go badge in my README file?",
      "role": "link",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Home · pkg.go.dev",
  "role": "WebArea",
}
`;

exports[`license policy accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "button",
    },
    Object {
      "description": "Search for a package",
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "level": 1,
      "name": "License Disclaimer",
      "role": "heading",
    },
    Object {
      "name": "The Go website displays license information in order to help users evaluate packages for their intended use. Licenses are detected using heuristics based on their file name and contents. We hope this information is helpful, but this is not legal advice and we do not make any guarantees regarding the accuracy of our license detection.",
      "role": "text",
    },
    Object {
      "name": "If we are not able to detect one of the licenses below, only limited package and module information will be made available. If you are a package author seeking to make your content available on the Go website, please be aware that our detection algorithms can be affected by any modifications of the license text, or by the use of an uncommon license file name.",
      "role": "text",
    },
    Object {
      "name": "We currently use",
      "role": "text",
    },
    Object {
      "name": "github.com/google/licensecheck",
      "role": "link",
    },
    Object {
      "name": "for license detection, and look for licenses in files with the following names: COPYING, COPYING.md, COPYING.markdown, COPYING.txt, LICENCE, LICENCE.md, LICENCE.markdown, LICENCE.txt, LICENSE, LICENSE.md, LICENSE.markdown, LICENSE.txt, LICENSE-2.0.txt, LICENCE-2.0.txt, LICENSE-APACHE, LICENCE-APACHE, LICENSE-APACHE-2.0.txt, LICENCE-APACHE-2.0.txt, LICENSE-MIT, LICENCE-MIT, LICENSE.MIT, LICENCE.MIT, LICENSE.code, LICENCE.code, LICENSE.docs, LICENCE.docs, LICENSE.rst, LICENCE.rst, MIT-LICENSE, MIT-LICENCE, MIT-LICENSE.md, MIT-LICENCE.md, MIT-LICENSE.markdown, MIT-LICENCE.markdown, MIT-LICENSE.txt, MIT-LICENCE.txt, MIT_LICENSE, MIT_LICENCE, UNLICENSE, UNLICENCE. The match is case-insensitive.",
      "role": "text",
    },
    Object {
      "name": "We currently detect and recognize the following licenses:",
      "role": "text",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "0BSD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "AFL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "AGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "AGPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "AGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Apache-1.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Apache-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Artistic-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-1-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-2-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-2-Clause-Patent",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-2-Clause-Views",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-3-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-3-Clause-Clear",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-3-Clause-Open-MPI",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-4-Clause",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSD-4-Clause-UC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BSL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "BlueOak-1.0.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "CC-BY-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "CC-BY-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "CC-BY-SA-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "CC-BY-SA-4.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "CC0-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "EPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "EPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "EUPL-1.2",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-2.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-2.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-3.0-only",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "GPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "HPND",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "ISC",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "JSON",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "LGPL-2.1",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "LGPL-2.1-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "LGPL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "LGPL-3.0-or-later",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "MIT",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "MIT-0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "MPL-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "MPL-2.0-no-copyleft-exception",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "NCSA",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "NIST-PD",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "NIST-PD-fallback",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "OSL-3.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "OpenSSL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "PostgreSQL",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Python-2.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "UPL-1.0",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Unlicense",
      "role": "link",
    },
    Object {
      "name": "•",
      "role": "text",
    },
    Object {
      "name": "Zlib",
      "role": "link",
    },
    Object {
      "name": "If you use a package whose license is not detected, please inform the package author. If you are a package author who believes a license for one of your packages should have been detected and was not, please check for discrepancies between your license and the official text. If you still believe there is an error, please",
      "role": "text",
    },
    Object {
      "name": "file an issue",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Licenses · pkg.go.dev",
  "role": "WebArea",
}
`;

exports[`search help accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Link to Go Homepage",
      "role": "link",
    },
    Object {
      "name": "Search for a package",
      "role": "button",
    },
    Object {
      "description": "Search for a package",
      "name": "Search for a package",
      "role": "textbox",
    },
    Object {
      "name": "Open navigation.",
      "role": "button",
    },
    Object {
      "level": 1,
      "name": "Search help",
      "role": "heading",
    },
    Object {
      "name": "You can use symbols or words in your search to make your search results more precise.",
      "role": "text",
    },
    Object {
      "level": 2,
      "name": "Search for an exact match",
      "role": "heading",
    },
    Object {
      "name": "Put a word or phrase inside quotes. For example,",
      "role": "text",
    },
    Object {
      "name": "\\"go cloud\\"",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "level": 2,
      "name": "Combine searches",
      "role": "heading",
    },
    Object {
      "name": "Put OR between each search query. For example,",
      "role": "text",
    },
    Object {
      "name": "yaml OR json",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "level": 2,
      "name": "Search by package path",
      "role": "heading",
    },
    Object {
      "name": "You can search for a package by its full or partial import path. For example,",
      "role": "text",
    },
    Object {
      "name": "go/packages",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "name": "If the query matches a package import path, you will be redirected to the package details page for the latest version of that package. For example,",
      "role": "text",
    },
    Object {
      "name": "golang.org/x/tools/go/packages",
      "role": "link",
    },
    Object {
      "name": ".",
      "role": "text",
    },
    Object {
      "description": "Why Go",
      "name": "Why Go",
      "role": "link",
    },
    Object {
      "description": "Use Cases",
      "name": "Use Cases",
      "role": "link",
    },
    Object {
      "description": "Case Studies",
      "name": "Case Studies",
      "role": "link",
    },
    Object {
      "description": "Getting Started",
      "name": "Getting Started",
      "role": "link",
    },
    Object {
      "name": "Playground",
      "role": "link",
    },
    Object {
      "name": "Tour",
      "role": "link",
    },
    Object {
      "name": "Stack Overflow",
      "role": "link",
    },
    Object {
      "description": "Discover Packages",
      "name": "Discover Packages",
      "role": "link",
    },
    Object {
      "description": "About",
      "name": "About",
      "role": "link",
    },
    Object {
      "name": "Download",
      "role": "link",
    },
    Object {
      "name": "Blog",
      "role": "link",
    },
    Object {
      "name": "Release Notes",
      "role": "link",
    },
    Object {
      "name": "Brand Guidelines",
      "role": "link",
    },
    Object {
      "name": "Code of Conduct",
      "role": "link",
    },
    Object {
      "description": "Connect",
      "name": "Connect",
      "role": "link",
    },
    Object {
      "name": "Twitter",
      "role": "link",
    },
    Object {
      "name": "GitHub",
      "role": "link",
    },
    Object {
      "name": "Slack",
      "role": "link",
    },
    Object {
      "name": "Meetup",
      "role": "link",
    },
    Object {
      "name": "Gopher in flight goggles",
      "role": "img",
    },
    Object {
      "name": "Copyright",
      "role": "link",
    },
    Object {
      "name": "Terms of Service",
      "role": "link",
    },
    Object {
      "name": "Privacy Policy",
      "role": "link",
    },
    Object {
      "name": "Report an Issue",
      "role": "link",
    },
    Object {
      "name": "golang.org",
      "role": "link",
    },
    Object {
      "name": "Google logo",
      "role": "link",
    },
  ],
  "name": "Search Help · pkg.go.dev",
  "role": "WebArea",
}
`;
